--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
@@ -10,6 +10,9 @@
     <h1>{{ title }}</h1>
     
     <a href="{% url goto_refrigerator %}">{{ goto_refrigerator_text }}</a>
+    <a href="{% url goto_register %}">{{ goto_register_text }}</a>
+    <a href="{% url goto_change_select %}">{{ goto_change_select_text }}</a>
+    <a href="{% url goto_search %}">{{ goto_search_text }}</a>
     <p>{{ text }}</p>
 </body>
 </html>
