--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_search.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_search.html
@@ -9,7 +9,11 @@
 <body>
     <h1>{{ title }}</h1>
     
+    
     <a href="{% url goto_refrigerator %}">{{ goto_refrigerator_text }}</a>
+    <a href="{% url goto_register %}">{{ goto_register_text }}</a>
+    <a href="{% url goto_change_select %}">{{ goto_change_select_text }}</a>
+    <a href="{% url goto_search %}">{{ goto_search_text }}</a>
     <p>{{ text }}</p>
 </body>
 </html>
