パスワード変更機能を追加

--- a/syokuzai_tarou/accounts/templates/accounts/home.html
+++ b/syokuzai_tarou/accounts/templates/accounts/home.html
@@ -14,6 +14,7 @@
     <p>こんにちは{{ user.username }}さん</p>
  
     <p><a href="{% url 'logout' %}">ログアウト</a></p>
+    <p><a href="{% url 'password_change' %}">パスワード変更</a></p>
 </body>
  
 </html>
