--- a/syokuzai_tarou/accounts/templates/registration/login.html
+++ b/syokuzai_tarou/accounts/templates/registration/login.html
@@ -15,6 +15,7 @@
         {{ form.as_p }}
         <button type="submit">ログイン</button>
     </form>
+    <p><a href="{% url 'signup' %}">新規作成</a></p>
 </body>
  
 </html>
