アカウント認証のhtmlを整理

--- a/syokuzai_tarou/accounts/templates/accounts/password_change.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change.html
@@ -1,34 +1,33 @@
-{% extends "commons/base.html" %}
+{% load static %}
 
-{% block title %}パスワード変更{% endblock %}
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>SIGN UP</title>
 
-{% block styles %}
-{% endblock %}
-
-{% block headertitle %}パスワード変更{% endblock %}
-
-{% block content %}
-<div class="row justify-content-md-center">
-<div  class="col-6">
+  <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
+  
+</head>
+<body>
+<h1>パスワード変更</h1>
 <form action="" method="POST">
     {{ form.non_field_errors }}
+    {% block content %}
     {% for field in form %}
-    <div class="form-group">
+
         <label class="col-6" for="{{ field.id_for_label }}">{{ field.label_tag }}</label>
         {{ field }}
         {{ field.errors }}
-    </div>
+    </br>
     {% endfor %}
     {% csrf_token %}
-    <div class="form-group row">
-      <div class="col-sm">
-        <button type="submit" class="btn btn-primary btn-block">送信</button>
-      </div>
-      <div class="col-sm">
+   
+        <button type="submit" class="btn btn-primary btn-block">送信</button></br>
         <button type="submit" class="btn btn-primary btn-block" onClick="javascript:history.go(-1);">戻る</button>
-      </div>
-    </div>
+        {% endblock %}
 </form>
-</div>
-</div>
-{% endblock %}
+
+</body>
+</html>
+
