--- a/syokuzai_tarou/accounts/templates/accounts/password_change_done.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change_done.html
@@ -1,14 +1,17 @@
-{% extends "commons/base.html" %}
+{% load static %}
 
-{% block title %}パスワード変更完了{% endblock %}
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>パスワード変更完了</title>
 
-{% block styles %}
-{% endblock %}
-
-{% block headertitle %}パスワード変更完了{% endblock %}
-
-{% block content %}
-<p>パスワードを変更しました。</p>
-<a class="btn btn-primary btn-block" href="{% url 'home' %}">トップへ</a>
-
-{% endblock %}
+  <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
+  
+</head>
+<body>
+    <h1>パスワード変更完了</h1>
+    <p>パスワードを変更しました。</p>
+    <a class="btn btn-primary btn-block" href="{% url 'home' %}">トップへ</a>
+</body>
+</html>
