--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
@@ -13,6 +13,8 @@
     <a href="{% url goto_register %}">{{ goto_register_text }}</a>
     <a href="{% url goto_change_select %}">{{ goto_change_select_text }}</a>
     <a href="{% url goto_search %}">{{ goto_search_text }}</a>
+    <a href="{% url goto_recipe_select %}">{{ goto_recipe_select_text }}</a>
+    <a href="{% url goto_delete %}">{{ goto_delete_text }}</a>
     <p>{{ text }}</p>
 </body>
 </html>
