サンプルページ追加

--- a/syokuzai_tarou/accounts/templates/accounts/password_change.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change.html
@@ -2,32 +2,44 @@
 
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-  <meta charset="UTF-8">
-  <title>SIGN UP</title>
-
-  <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
-  
+    <meta charset="UTF-8">
+    <title>パスワード変更</title>
+    <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
+    <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
 </head>
-<body>
-<h1>パスワード変更</h1>
-<form action="" method="POST">
-    {{ form.non_field_errors }}
-    {% block content %}
-    {% for field in form %}
 
-        <label class="col-6" for="{{ field.id_for_label }}">{{ field.label_tag }}</label>
-        {{ field }}
-        {{ field.errors }}
-    </br>
-    {% endfor %}
-    {% csrf_token %}
-   
-        <button type="submit" class="btn btn-primary btn-block">送信</button></br>
-        <button type="submit" class="btn btn-primary btn-block" onClick="javascript:history.go(-1);">戻る</button>
-        {% endblock %}
-</form>
+<body>
+    <header class="header">
+        <h1 class="logo">食材残さないよ太郎</h1>
+        <nav class="global-nav">
+            <ul>
+                <li class="nav-item active"><a href="{% url 'home' %}">HOME</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="wrapper">
+        <main class="main">
+            <h1>パスワード変更</h1>
+            <form action="" method="POST">
+                {{ form.non_field_errors }} {% block content %} {% for field in form %}
+
+                <label class="col-6" for="{{ field.id_for_label }}">{{ field.label_tag }}</label> {{ field }} {{ field.errors }}
+                </br>
+                {% endfor %} {% csrf_token %}
+
+                <button type="submit" class="btn btn-primary btn-block">送信</button></br>
+                <button type="submit" class="btn btn-primary btn-block" onClick="javascript:history.go(-1);">戻る</button> {% endblock %}
+            </form>
+        </main>
+    </div>
+    <footer class="footer">
+        <p class="copyright">Copyright @ 2020 syokuzai_tarou</p>
+    </footer>
+
+
 
 </body>
-</html>
 
+</html>
