--- a/syokuzai_tarou/refrigerator/static/refrigerator/css/style.css
+++ b/syokuzai_tarou/refrigerator/static/refrigerator/css/style.css
@@ -1,64 +1,112 @@
-body{
-    color:rgb(0, 0, 0);
-    font-size:13pt;
-   }
-   
-   h1{
-    color:rgb(0, 0, 0);
-    opacity:0.2;
-    font-size:30pt;
-    margin-top:0pt;
-    margin-bottom:0px;
-    text-align:center;
-   }
-   
-   p{
-    margin:10px;
-   }
-   
-   a{
-    color:blue;
-    text-decoration:none;
-   }
-   
-   
-   
-   .button1 {
-     display: inline-block;
-     width: 200px;
-     height: 54px;
-     text-align: center;
-     text-decoration: none;
-     line-height: 54px;
-     outline: none;
-     background-color: #333;
-     border: 2px solid #333;
-     color: #fff;
-     line-height: 50px;
-   }
-   .button1:hover {
-     background-color: #fff;
-     border-color: #59b1eb;
-     color: #59b1eb;
-   }
-   .button1::before,
-   .button1::after {
-     position: absolute;
-     z-index: -1;
-     display: block;
-     content: '';
-   }
-   .button1,
-   .button1::before,
-   .button1::after {
-     -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-     box-sizing: border-box;
-     -webkit-transition: all .3s;
-     transition: all .3s;
-   }
-   
-   .sample img{
-       width:40%;
-       height:auto;
-   }
+@charset "UTF-8";
+html {
+    font-size: 62.5%;
+}
+
+body {
+    color: #333;
+    font-size: 1.2rem;
+    font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+    background: #e6dfcb url('../images/background.png');
+}
+
+*,
+*::before,
+* ::after {
+    box-sizing: border-box;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+    color: #567947;
+    text-decoration: none;
+}
+
+.header {
+    width: 100%;
+    background-color: #e6dfcb;
+    padding: 28px 0 10px;
+    box-shadow: 0 0 10px 1px #e3e3e3;
+}
+
+.wrapper {
+    width: 970px;
+    margin: 30px auto 40px;
+}
+
+.main {
+    display: block;
+    width: 660px;
+    margin: 0 auto;
+    height: 500px;
+    text-align: center;
+}
+
+.footer {
+    width: 100%;
+    padding: 20px 0 30px;
+    background-color: #567947;
+    color: #fff;
+}
+
+.logo {
+    width: 225px;
+    height: 56px;
+    margin: 0 auto;
+    color: #eb5a09;
+    /*ロゴ作れば追加する p36
+    background: url('') no-repeat;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+    */
+}
+
+.logo a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.global-nav {
+    margin-top: 15px;
+    text-align: center;
+}
+
+.global-nav .nav-item {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.global-nav .nav-item a {
+    display: inline-block;
+    width: 100px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 8px;
+    color: #666;
+    font-size: 1.3rem;
+    letter-spacing: 1px;
+    transition: 0.15s;
+}
+
+
+/*リンクにホバーしたときに色をつける*/
+
+.global-nav .nav-item.active a,
+.global-nav .nav-item a:hover {
+    background-color: #567947;
+    color: #fff;
+}
+
+
+/* copyright */
+
+.copyright {
+    margin-top: 30px;
+    text-align: center;
+    letter-spacing: 1px;
+}
