--- a/syokuzai_tarou/accounts/templates/accounts/index.html
+++ b/syokuzai_tarou/accounts/templates/accounts/index.html
@@ -1,20 +1,20 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
-    <title>HOME</title>
+    <title>テストページ</title>
     <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
 </head>
 
 <body>
     <header class="header">
-        <h1 class="logo">食材太郎</h1>
+        <h1 class="logo">サンプルサイト</h1>
         <nav class="global-nav">
             <ul>
-                <li class="nav-item active"><a href="{% url 'home' %}">HOME</a></li>
+                <li class="nav-item active"><a href="#">HOME</a></li>
                 <li class="nav-item"><a href="#">ABOUT</a></li>
                 <li class="nav-item"><a href="#">NEWS</a></li>
                 <li class="nav-item"><a href="#">TOPICS</a></li>
@@ -22,12 +22,10 @@
                 <li class="nav-item"><a href="#">BLOG</a></li>
             </ul>
         </nav>
-        <p><a href="{% url 'logout' %}">ログアウト</a></p>
-        <p><a href="{% url 'password_change' %}">パスワード変更</a></p>
     </header>
     <div class="wrapper">
         <main class="main">
-            <p>こんにちは{{ user.username }}さん</p>
+            <a>もじもじ</a>
         </main>
     </div>
     <footer class="footer">
