--- a/syokuzai_tarou/accounts/templates/accounts/password_change_done.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change_done.html
@@ -2,16 +2,36 @@
 
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>パスワード変更完了</title>
 
-  <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
-  
+<head>
+    <meta charset="UTF-8">
+    <title>パスワード変更完了</title>
+    <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
+    <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
 </head>
+
 <body>
-    <h1>パスワード変更完了</h1>
-    <p>パスワードを変更しました。</p>
-    <a class="btn btn-primary btn-block" href="{% url 'home' %}">トップへ</a>
+
+
+    <header class="header">
+        <h1 class="logo">食材残さないよ太郎</h1>
+        <nav class="global-nav">
+            <ul>
+                <li class="nav-item active"><a href="{% url 'home' %}">HOME</a></li>
+
+            </ul>
+        </nav>
+    </header>
+    <div class="wrapper">
+        <main class="main">
+            <h1>パスワード変更完了</h1>
+            <p>パスワードを変更しました。</p>
+            <button><a href="{% url 'home' %}">HOME</a></button>
+        </main>
+    </div>
+    <footer class="footer">
+        <p class="copyright">Copyright @ 2020 syokuzai_tarou</p>
+    </footer>
 </body>
+
 </html>
