--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
@@ -1,18 +1,23 @@
 {% load static %}
 <!doctype html>
 <html lang="ja">
+
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/style.css' %}" />
     <title>hello</title>
 </head>
+
 <body>
     <h1>{{ title }}</h1>
-    
+
     <a href="{% url goto_refrigerator %}">{{ goto_refrigerator_text }}</a>
     <a href="{% url goto_register %}">{{ goto_register_text }}</a>
     <a href="{% url goto_change_select %}">{{ goto_change_select_text }}</a>
     <a href="{% url goto_search %}">{{ goto_search_text }}</a>
+    <a href="{% url goto_recipe_select %}">{{ goto_recipe_select_text }}</a>
+    <a href="{% url goto_delete %}">{{ goto_delete_text }}</a>
     <p>{{ text }}</p>
 </body>
+
 </html>
