--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/style.css' %}" />
-    <title>{{ title }}</title>
+    <title>hello</title>
 </head>
 <body>
     <h1>{{ title }}</h1>
+    
     <a href="{% url goto_refrigerator %}">{{ goto_refrigerator_text }}</a>
     <a href="{% url goto_register %}">{{ goto_register_text }}</a>
     <a href="{% url goto_change_select %}">{{ goto_change_select_text }}</a>
@@ -15,6 +16,6 @@
     <a href="{% url goto_recipe_select %}">{{ goto_recipe_select_text }}</a>
     <a href="{% url goto_delete %}">{{ goto_delete_text }}</a>
     <p>{{ text }}</p>
-    <a href="{% url goto_recipe %}">{{ goto_recipe_text }}</a>
+    <a href="{% url goto_change_refrigerator %}">{{ goto_change_refrigerator_text }}</a>
 </body>
 </html>
