--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_delete.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_delete.html
@@ -15,5 +15,6 @@
     <a href="{% url goto_recipe_select %}">{{ goto_recipe_select_text }}</a>
     <a href="{% url goto_delete %}">{{ goto_delete_text }}</a>
     <p>{{ text }}</p>
+    <a href="{% url goto_delete_refrigerator %}">{{ goto_delete_refrigerator_text }}</a>
 </body>
 </html>
