--- a/syokuzai_tarou/refrigerator/templates/refrigerator/recipe.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/recipe.html
@@ -15,6 +15,6 @@
     <a href="{% url goto_recipe_select %}">{{ goto_recipe_select_text }}</a>
     <a href="{% url goto_delete %}">{{ goto_delete_text }}</a>
     <p>{{ text }}</p>
-    <a href="{% url goto_recipe %}">{{ goto_recipe_text }}</a>
+    <a href="{% url goto_recipe_reselect %}">{{ goto_recipe_reselect_text }}</a>
 </body>
 </html>
