“画面キレイキレイ_1205

--- a/syokuzai_tarou/accounts/templates/accounts/index.html
+++ b/syokuzai_tarou/accounts/templates/accounts/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="header">
-        <h1 class="logo">サンプルサイト</h1>
+        <h1 class="logo">食材残さないよ太郎</h1>
         <nav class="global-nav">
             <ul>
                 <li class="nav-item active"><a href="#">HOME</a></li>
