--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
@@ -19,13 +19,28 @@
                 <li class="nav-item"> <a href="{% url goto_search %}">{{ goto_search_text }}</a></li>
                 <li class="nav-item"><a href="{% url goto_recipe_select %}">{{ goto_recipe_select_text }}</a></li>
                 <li class="nav-item"><a href="{% url goto_delete %}">{{ goto_delete_text }}</a></li>
-                <li class="nav-item"><a href="{% url goto_change %}">{{ goto_change_text }}</a></li>
             </ul>
         </nav>
     </header>
     <div class="wrapper">
        <main class="main">
         <a>食材登録変更を選択するページ</a>
+        <table>
+            <tr>
+                <th></th>
+                <th>番号</th>
+                <th>食材名</th>
+            </tr>
+            {% for item in data %}
+                <tr>
+                    <td><input type="radio" value="change"></td>
+                    <td>{{ item.id }}</td>
+                    <td>{{ item.foodName }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+        {% csrf_token %}
+        <input type="submit" value="食材変更">
     </main>
     </div>
     <footer class="footer">
