--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
@@ -28,16 +28,19 @@
         <table>
             <tr>
                 <th></th>
-                <th>番号</th>
+              
                 <th>食材名</th>
             </tr>
-            {% for item in data %}
-                <tr>
-                    <td><input type="radio" value="change"></td>
-                    <td>{{ item.id }}</td>
-                    <td>{{ item.foodName }}</td>
-                </tr>
-            {% endfor %}
+            <tr>
+            
+              {% for radio in form.select %}
+              <td>{{ form.select.label }}</td>
+              <td>{{ radio.tag }}</td>
+                
+                 {% endfor %}
+            </tr>
+           
+
         </table>
         {% csrf_token %}
         <input type="submit" value="食材変更">
