--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
@@ -21,8 +21,8 @@
         <h1 class="logo">食材残さないよ太郎</h1>
         <nav class="global-nav">
              <ul>
-                <li class="nav-item active"><a href="{% url goto_refrigerator %}">{{ goto_refrigerator_text }}</a></li>
-                <li class="nav-item"><a href="{% url goto_register %}">{{ goto_register_text }}</a></li>
+                <li class="nav-item"><a href="{% url goto_refrigerator %}">{{ goto_refrigerator_text }}</a></li>
+                <li class="nav-item active"><a href="{% url goto_register %}">{{ goto_register_text }}</a></li>
                 <li class="nav-item"><a href="{% url goto_change_select %}">{{ goto_change_select_text }}</a></li>
                 <li class="nav-item"> <a href="{% url goto_search %}">{{ goto_search_text }}</a></li>
                 <li class="nav-item"><a href="{% url goto_recipe_select %}">{{ goto_recipe_select_text }}</a></li>
@@ -46,7 +46,6 @@
                 <td><input type="submit" value="登録"></td>
             </tr>
         </form>
-    
 </main>
 </div>
 
