--- a/syokuzai_tarou/refrigerator/templates/refrigerator/calender.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/calender.html
@@ -15,11 +15,29 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
 <script type="text/javascript" src="/static/bootstrap_datepicker_plus/js/datepicker-widget.js"></script> 
+<link rel="stylesheet" href="{% static 'refrigerator/css/hamburger.css' %}" />
 </head>
 
 <body>
     <header class="header">
         <h1 class="logo">サンプルサイト</h1>
+        <div class="outer-menu">
+            <input class="checkbox-toggle" type="checkbox" />
+            <div class="hamburger">
+            <div></div>
+            </div>
+            <div class="menu">
+                <div>
+                    <div>
+                        <ul>
+                            <p>Hey！<font color="blue">{{ user.username }}</font></p>
+                            <li><a href="{% url 'logout' %}">ログアウト</a></li>
+                            <li><a href="{% url 'password_change' %}">パスワード変更</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         <nav class="global-nav">
             <ul>
                 <li class="nav-item active"><a href="#">HOME</a></li>
