--- a/syokuzai_tarou/refrigerator/templates/refrigerator/refrigerator.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/refrigerator.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/table.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/hamburger.css' %}" />
     <title>{{ title }}</title>
 </head>
