遷移先修正等_1210

--- a/syokuzai_tarou/accounts/templates/accounts/password_change.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change.html
@@ -15,7 +15,7 @@
         <h1 class="logo">食材残さないよ太郎</h1>
         <nav class="global-nav">
             <ul>
-                <li class="nav-item active"><a href="{% url 'home' %}">HOME</a></li>
+                <li class="nav-item active"><a href="{% url 'refrigerator' %}">HOME</a></li>
             </ul>
         </nav>
     </header>
