--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_search.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_search.html
@@ -21,7 +21,7 @@
                 <div>
                     <div>
                         <ul>
-                            <p>Hey！<font color="blue">{{ user.username }}</font></p>
+                            <hu>Hey！<font color="blue">{{ user.username }}</font></hu>
                             <li><a href="{% url 'logout' %}">ログアウト</a></li>
                             <li><a href="{% url 'password_change' %}">パスワード変更</a></li>
                         </ul>
