--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/hamburger.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/deco_btn.css' %}" />
     <title>hello</title>
 </head>
 <body>
@@ -50,7 +51,7 @@
         <tr>
             {{ form }}
         </tr>
-        <input type="submit" value="食材変更">
+        <input class="decorated-btn" type="submit" value="食材変更">
     </form>
    </main>
 </div>
