--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/deco_btn.css' %}" />
     <title>hello</title>
     <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
@@ -49,28 +50,28 @@
             </ul>
         </nav>
     
-</header>
-<div class="wrapper">
-   <main class="main">
-    <h2>食材登録ページ</h2>
-    <table>
-        <form action="{% url 'food_register' %}" method="post">
-            {% csrf_token %}
-           
-            {{ form_foodset.as_table }}
-           
-            <tr>
-                <td></td>
-                <td><input type="submit" value="登録"></td>
-            </tr>
-        </form>
-    </table>
-</main>
-</div>
+    </header>
+    <div class="wrapper">
+    <main class="main">
+        <h2>食材登録ページ</h2>
+        <table>
+            <form action="{% url 'food_register' %}" method="post">
+                {% csrf_token %}
+            
+                {{ form_foodset.as_table }}
+            
+                <tr>
+                    <td></td>
+                    <td><input class="decorated-btn" type="submit" value="登録"></td>
+                </tr>
+            </form>
+        </table>
+    </main>
+    </div>
 
-<footer class="footer">
-     <p class="copyright">Copyright @ 2020 syokuzai_tarou</p>
-</footer>
+    <footer class="footer">
+        <p class="copyright">Copyright @ 2020 syokuzai_tarou</p>
+    </footer>
 </body>
 
 </html>
