--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/hamburger.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/deco_btn.css' %}" />
-    <title>hello</title>
+    <title>{{title}}</title>
 </head>
 <body>
     <header class="header">
